--- a/dataset/ls.save.2
+++ b/dataset/ls.save.2
@@ -8,11 +8,12 @@ set -e  # Fail on first error
 CURRENT_DIR="$( cd "$( dirname "${BASH_SOURCE[0]}" )" >/dev/null && pwd )"
 SCRIPT_NAME="$0"
 
-REAL_CURRENT_DIR=$(readlink -f "$CURRENT_DIR")
-PROJECT_ROOT="$REAL_CURRENT_DIR/.."
+PROJECT_ROOT="$CURRENT_DIR/.."
+
 source $PROJECT_ROOT/.conf
-source $PROJECT_ROOT/util.sh
-source $PROJECT_ROOT/common.sh
+source $C/log4bash.sh
+source $CURRENT_DIR/../util.sh
+source $CURRENT_DIR/../common.sh
 
 AUTOGEN_TPL="# This is automatically generated file! Do not edit!"
 #------------------------------------------------------------------------------------
